# smh-to-jsonld

./: .gitignore  README.md  conftest.py  create_jsonld.py  pyproject.toml  requirements.txt  round_highlighted.html  round_pre.html  round_tree.html  run_pipeline.py  test_pipeline.py  to_html.py  update_source_data.py
.github/workflows/: main.yml
config/: repos.yaml
geodata/: geodata.csv
pipeline/: __init__.py  clean_output.py  create_jsonld.py  create_jsonld_v5_1_0.py  create_jsonld_v6.py  create_jsonld_v6_0_0.py  jsonld_to_html.py  update_source_data.py
tests/: conftest.py  test_jsonld_to_html_unit.py  test_jsonld_v5_integration.py  test_jsonld_v6_integration.py  test_jsonld_v6_unit.py
tests/snapshots/: round_2025-07-27_key_fields.json
utils/: config.py  jsonld.py  location.py  loggings.py  lookup.py  model_output.py  model_output_smh.py  output_parse.py  tasks.py  tasks_json_parser.py  tasks_smh.py  temporal.py
