[project]
name = "smh-parser"
version = "0.1.0"
description = "Processes RSV Forecasting Hub model outputs and generates consolidated JSON-LD metadata files"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.0",
    "hubdata>=0.1.5",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "python-dateutil>=2.9.0",
    "pytz>=2025.1",
    "PyYAML>=6.0.2",
    "rich>=14.2.0",
    "structlog>=25.5.0",
    "tabulate>=0.9.0",
    "tzdata>=2025.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-html>=4.1.1",
]

[tool.pytest.ini_options]
# -s: don't capture output so subprocess progress is visible in real time
# -v: show each test name as it runs
addopts = "-s -v"
testpaths = ["test_pipeline.py", "tests"]
